stderr.log
'import site' failed; use -v for traceback
  File "manage.py", line 17
    ) from exc
         ^
SyntaxError: invalid syntax
'import site' failed; use -v for traceback
  File "/home/alwammwb/billmanagementsystem/manage.py", line 17
    ) from exc
         ^
SyntaxError: invalid syntax
Not Found: /charges/static/css/logo_icon.ico
Not Found: /User/static/css/logo_icon.ico
Admin
Not Found: /meters/static/css/logo_icon.ico
Not Found: /favicon.ico
None None None
None None None
999test
<QuerySet [<CalculatedBill: 1231>, <CalculatedBill: 1231>]>
Not Found: /favicon.ico
999test
<QuerySet [<CalculatedBill: 1231>, <CalculatedBill: 1231>]>
Not Found: /favicon.ico
999test
<QuerySet [<CalculatedBill: 1231>, <CalculatedBill: 1231>]>
